--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           id="leftNav"
         >
           <div id="info">
-            <h1 class="text-4xl sm:text-5xl font-black text-white">
+            <h1 class="text-4xl font-black text-white sm:text-5xl">
               Daniel Biacan III
             </h1>
-            <h2 class="text-xl sm:text-2xl font-bold text-white">
+            <h2 class="mt-3 text-xl sm:text-2xl text-white">
               Frontend Web Developer
             </h2>
           </div>
@@ -41,8 +41,16 @@
               >Projects</a
             >
           </div>
+          <div id="contact">
+            <form action="" class="flex flex-col gap-4">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" />
+              <label for="message">Message</label>
+              <input type="text" id="message" />
+            </form>
+          </div>
           <!-- Social Media Links -->
-          <div id="links" class="flex gap-4">
+          <div id="links" class="flex gap-4 mt-3">
             <!-- Github -->
             <a href="https://github.com/deymdaniel" target="_blank">
               <svg
