--- a/index.html
+++ b/index.html
@@ -41,12 +41,27 @@
               >Projects</a
             >
           </div>
-          <div id="contact">
+          <div id="contact" class="hidden lg:block">
             <form action="" class="flex flex-col gap-4">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" />
-              <label for="message">Message</label>
-              <input type="text" id="message" />
+              <h1 class="font-bold">Contact Me!</h1>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email"
+                class="w-96 rounded-md p-1 bg-white text-blueGray-900"
+              />
+              <textarea
+                type="text"
+                id="message"
+                placeholder="Message"
+                class="w-96 h-36 rounded-md p-1 text-start bg-white text-blueGray-900"
+              ></textarea>
+              <button
+                class="rounded-md bg-white text-blueGray-900 w-min p-2 hover:bg-slate-400 active:bg-slate-600"
+              >
+                Submit
+              </button>
             </form>
           </div>
           <!-- Social Media Links -->
