--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               >Projects</a
             >
           </div>
+          <!-- Contact form for fullscreen -->
           <div id="contact" class="hidden lg:block">
             <form action="" class="flex flex-col gap-4">
               <h1 class="font-bold">Contact Me!</h1>
@@ -58,7 +59,8 @@
                 class="w-96 h-36 rounded-md p-1 text-start bg-white text-blueGray-900"
               ></textarea>
               <button
-                class="rounded-md bg-white text-blueGray-900 w-min p-2 hover:bg-slate-400 active:bg-slate-600"
+                type="submit"
+                class="rounded-md bg-white text-blueGray-900 w-min px-2 py-1 hover:bg-slate-400 active:bg-slate-600"
               >
                 Submit
               </button>
