--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <!-- Contact form for fullscreen -->
           <div id="contact" class="hidden lg:block">
             <form action="" class="flex flex-col gap-4">
-              <h1 class="font-bold">Contact Me!</h1>
+              <h1 class="font-bold text-xl text-white">Contact Me!</h1>
               <input
                 type="email"
                 name="email"
@@ -60,7 +60,7 @@
               ></textarea>
               <button
                 type="submit"
-                class="rounded-md bg-white text-blueGray-900 w-min px-2 py-1 hover:bg-slate-400 active:bg-slate-600"
+                class="rounded-md bg-rose-500 w-min px-2 py-1 hover:bg-rose-400 active:bg-rose-500 text-white"
               >
                 Submit
               </button>
@@ -155,6 +155,21 @@
                 />
               </svg>
             </a>
+            <!-- Gmail -->
+            <a href="mailto:danielbiacaniii@gmail.com">
+              <svg
+                class="fill-slate-400 hover:fill-white"
+                width="24"
+                height="24"
+                xmlns="http://www.w3.org/2000/svg"
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+              >
+                <path
+                  d="M22.288 21h-20.576c-.945 0-1.712-.767-1.712-1.712v-13.576c0-.945.767-1.712 1.712-1.712h20.576c.945 0 1.712.767 1.712 1.712v13.576c0 .945-.767 1.712-1.712 1.712zm-10.288-6.086l-9.342-6.483-.02 11.569h18.684v-11.569l-9.322 6.483zm8.869-9.914h-17.789l8.92 6.229s6.252-4.406 8.869-6.229z"
+                />
+              </svg>
+            </a>
           </div>
         </div>
         <!-- Right Content -->
@@ -206,6 +221,30 @@
           </div>
         </div>
       </div>
+    </div>
+    <div id="contact" class="lg:hidden">
+      <form action="" class="flex flex-col gap-6 mx-6">
+        <h1 class="font-bold text-xl text-white">Contact Me!</h1>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email"
+          class="rounded-md p-1 bg-white text-blueGray-900"
+        />
+        <textarea
+          type="text"
+          id="message"
+          placeholder="Message"
+          class="rounded-md p-1 text-start bg-white text-blueGray-900 h-36"
+        ></textarea>
+        <button
+          type="submit"
+          class="rounded-md bg-rose-500 w-min px-2 py-1 hover:bg-rose-400 active:bg-rose-500 self-center text-white"
+        >
+          Submit
+        </button>
+      </form>
     </div>
   </body>
 </html>
